--- a/conf/php.ini
+++ b/conf/php.ini
@@ -1,4 +1,4 @@
-[PHP]
+$PHP_PATH/extPHP]
 
 ;;;;;;;;;;;;;;;;;;;
 ; About php.ini   ;
@@ -945,6 +945,7 @@ default_socket_timeout = 60
 ; Be sure to appropriately set the extension_dir directive.
 ;
 extension=soap.so
+extension=/app/php/ext/redis.so
 ;extension=php_bz2.dll
 ;extension=php_curl.dll
 ;extension=php_fileinfo.dll
