Updated PHP-FPM configuration.

--- a/conf/php-fpm.conf
+++ b/conf/php-fpm.conf
@@ -22,7 +22,7 @@
 ; Pid file
 ; Note: the default prefix is /app/vendor/php/var
 ; Default Value: none
-;pid = run/php-fpm.pid
+pid = run/php-fpm.pid
 
 ; Error log file
 ; If it's set to "syslog", log is sent to syslogd instead of being written
@@ -464,12 +464,15 @@ ping.response = pong
 ; Default Value: clean env
 ;env[HOSTNAME] = $HOSTNAME
 ;env[PATH] = /usr/local/bin:/usr/bin:/bin
-;env[TMP] = /tmp
-;env[TMPDIR] = /tmp
-env[CLEARDB_DATABASE_URL_A] = $CLEARDB_DATABASE_URL_A
+env[TMP] = /tmp
+env[TMPDIR] = /tmp
 env[PATH] = $PATH
-env[SENDGRID_PASSWORD] = $SENDGRID_PASSWORD
-env[SENDGRID_USERNAME] = $SENDGRID_USERNAME
+;env[SENDGRID_PASSWORD] = $SENDGRID_PASSWORD
+;env[SENDGRID_USERNAME] = $SENDGRID_USERNAME
+env[MYSQL_HOST] = $MYSQL_HOST
+env[MYSQL_DB] = $MYSQL_DB
+env[MYSQL_USER] = $MYSQL_USER
+env[MYSQL_PASS] = $MYSQL_PASS
 
 ; Additional php.ini defines, specific to this pool of workers. These settings
 ; overwrite the values previously defined in the php.ini. The directives are the
