Added HEROKU env var.

--- a/conf/php-fpm.conf
+++ b/conf/php-fpm.conf
@@ -469,6 +469,7 @@ env[TMPDIR] = /tmp
 env[PATH] = $PATH
 ;env[SENDGRID_PASSWORD] = $SENDGRID_PASSWORD
 ;env[SENDGRID_USERNAME] = $SENDGRID_USERNAME
+env[HEROKU] = $HEROKU
 env[MYSQL_HOST] = $MYSQL_HOST
 env[MYSQL_DB] = $MYSQL_DB
 env[MYSQL_USER] = $MYSQL_USER
