--- a/conf/php-fpm.conf
+++ b/conf/php-fpm.conf
@@ -187,7 +187,8 @@ listen = /tmp/php-fpm.socket
 ;             pm.process_idle_timeout   - The number of seconds after which
 ;                                         an idle process will be killed.
 ; Note: This value is mandatory.
-pm = dynamic
+;pm = dynamic
+pm = static
 
 ; The number of child processes to be created when pm is set to 'static' and the
 ; maximum number of child processes when pm is set to 'dynamic' or 'ondemand'.
