Enabled php logging to file.

--- a/conf/php-fpm.conf
+++ b/conf/php-fpm.conf
@@ -497,6 +497,6 @@ env[MYSQL_PASS] = $MYSQL_PASS
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 ;php_flag[display_errors] = off
-;php_admin_value[error_log] = /var/log/fpm-php.www.log
-;php_admin_flag[log_errors] = on
+php_admin_value[error_log] = /app/vendor/php/var/log/php-errors.log
+php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
