allow xsl manipulation

--- a/conf/php.ini
+++ b/conf/php.ini
@@ -985,7 +985,7 @@ extension=apc.so
 ;extension=php_sybase_ct.dll
 ;extension=php_tidy.dll
 ;extension=php_xmlrpc.dll
-;extension=php_xsl.dll
+extension=php_xsl.dll
 ;extension=php_zip.dll
 
 ;;;;;;;;;;;;;;;;;;;
