Disabled PHP LoadModule since targz omits it

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -54,7 +54,7 @@ ListenBackLog 1024
 #
 # Example:
 # LoadModule foo_module modules/mod_foo.so
-LoadModule php5_module        modules/libphp5.so
+# LoadModule php5_module        modules/libphp5.so
 #
 
 <IfModule !mpm_netware_module>
