--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -106,7 +106,7 @@ ServerName 127.0.0.1
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/app/www"
+DocumentRoot "/app"
 
 #
 # Each directory to which Apache has access can be configured with respect
