--- a/conf/php.ini
+++ b/conf/php.ini
@@ -774,7 +774,7 @@ default_mimetype = "text/html"
 ; Always populate the $HTTP_RAW_POST_DATA variable. PHP's default behavior is
 ; to disable this feature.
 ; http://php.net/always-populate-raw-post-data
-;always_populate_raw_post_data = On
+always_populate_raw_post_data = On
 
 ;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Paths and Directories ;
