improved PHP error log output to heroku syslog

--- a/conf/php.ini
+++ b/conf/php.ini
@@ -636,6 +636,7 @@ html_errors = Off
 ;error_log = php_errors.log
 ; Log errors to syslog (Event Log on NT, not valid in Windows 95).
 ;error_log = syslog
+error_log = "/app/php/var/log/error_log"
 
 ;;;;;;;;;;;;;;;;;
 ; Data Handling ;
