--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -39,8 +39,8 @@ ServerRoot "/app/apache/"
 #Listen 12.34.56.78:80
 Listen ${PORT}
 
-ServerLimit 1
-MaxClients 1
+ServerLimit ${WEB_CONCURRENCY}
+MaxClients ${WEB_CONCURRENCY}
 ListenBackLog 1024
 
 #
