alpha buildpack, stab one (all in one commit, yes)

--- a/conf/php.ini
+++ b/conf/php.ini
@@ -944,8 +944,6 @@ default_socket_timeout = 60
 ; extension folders as well as the separate PECL DLL download (PHP 5).
 ; Be sure to appropriately set the extension_dir directive.
 ;
-extension=soap.so
-extension=apc.so
 ;extension=php_bz2.dll
 ;extension=php_curl.dll
 ;extension=php_fileinfo.dll
@@ -987,6 +985,8 @@ extension=apc.so
 ;extension=php_xmlrpc.dll
 ;extension=php_xsl.dll
 ;extension=php_zip.dll
+
+zend_extension=/app/.heroku/php/lib/php/extensions/no-debug-non-zts-20121212/opcache.so
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
@@ -1900,3 +1900,7 @@ ldap.max_links = -1
 ; Local Variables:
 ; tab-width: 4
 ; End:
+
+opcache.enable_cli = 1
+opcache.validate_timestamps = 0
+opcache.fast_shutdown = 0
