don't re-read user.ini too often

--- a/conf/php.ini
+++ b/conf/php.ini
@@ -201,7 +201,7 @@
 ;user_ini.filename =
 
 ; TTL for user-defined php.ini files (time-to-live) in seconds. Default is 300 seconds (5 minutes)
-;user_ini.cache_ttl = 300
+user_ini.cache_ttl = 86400
 
 ;;;;;;;;;;;;;;;;;;;;
 ; Language Options ;
