Revert "dynamic port for FPM"
This reverts commit 20e8b54bcf393056c941a59934a622acefaa600e.

--- a/conf/php/php-fpm.conf
+++ b/conf/php/php-fpm.conf
@@ -156,7 +156,7 @@ group = nobody
 ;                            specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = 127.0.0.1:${PORT}
+listen = 127.0.0.1:4999
 
 ; Set listen(2) backlog.
 ; Default Value: 65535 (-1 on FreeBSD and OpenBSD)
