--- a/conf/php.ini
+++ b/conf/php.ini
@@ -946,6 +946,7 @@ default_socket_timeout = 60
 ;
 extension=soap.so
 extension=apc.so
+extension=ibm_db2.so
 ;extension=php_bz2.dll
 ;extension=php_curl.dll
 ;extension=php_fileinfo.dll
