--- a/conf/php/php-fpm.conf
+++ b/conf/php/php-fpm.conf
@@ -145,8 +145,8 @@ daemonize = no
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-user = nobody
-group = nobody
+;user = nobody
+;group = nobody
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
