--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -1,34 +1,39 @@
 Listen ${PORT}
 
-DocumentRoot /app
-<Directory /app>
-    #
-    # Possible values for the Options directive are "None", "All",
-    # or any combination of:
-    #   Indexes Includes FollowSymLinks SymLinksifOwnerMatch ExecCGI MultiViews
-    #
-    # Note that "MultiViews" must be named *explicitly* --- "Options All"
-    # doesn't give it to you.
-    #
-    # The Options directive is both complicated and important.  Please see
-    # http://httpd.apache.org/docs/2.4/mod/core.html#options
-    # for more information.
-    #
-    Options Indexes FollowSymLinks
+<VirtualHost *:${PORT}>
 
-    #
-    # AllowOverride controls what directives may be placed in .htaccess files.
-    # It can be "All", "None", or any combination of the keywords:
-    #   AllowOverride FileInfo AuthConfig Limit
-    #
-    AllowOverride All
+    DocumentRoot ${DOCUMENT_ROOT}
+
+    <Directory ${DOCUMENT_ROOT}>
+        #
+        # Possible values for the Options directive are "None", "All",
+        # or any combination of:
+        #   Indexes Includes FollowSymLinks SymLinksifOwnerMatch ExecCGI MultiViews
+        #
+        # Note that "MultiViews" must be named *explicitly* --- "Options All"
+        # doesn't give it to you.
+        #
+        # The Options directive is both complicated and important.  Please see
+        # http://httpd.apache.org/docs/2.4/mod/core.html#options
+        # for more information.
+        #
+        Options Indexes FollowSymLinks
+
+        #
+        # AllowOverride controls what directives may be placed in .htaccess files.
+        # It can be "All", "None", or any combination of the keywords:
+        #   AllowOverride FileInfo AuthConfig Limit
+        #
+        AllowOverride All
     
-    DirectoryIndex index.php
+        DirectoryIndex index.php
 
-    #
-    # Controls who can get stuff from this server.
-    #
-    Require all granted
-</Directory>
+        #
+        # Controls who can get stuff from this server.
+        #
+        Require all granted
+    </Directory>
 
-ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:4999/app/$1
+    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:4999${DOCUMENT_ROOT}/$1
+
+</VirtualHost>
