--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -2,6 +2,9 @@ Listen ${PORT}
 
 <VirtualHost *:${PORT}>
 
+    ErrorLog /tmp/heroku.apache2_error.${PORT}.log
+	CustomLog /tmp/heroku.apache2_access.${PORT}.log common
+	
     DocumentRoot ${DOCUMENT_ROOT}
 
     <Directory ${DOCUMENT_ROOT}>
