--- a/conf/php/php-fpm.conf
+++ b/conf/php/php-fpm.conf
@@ -29,7 +29,7 @@
 ; in a local file.
 ; Note: the default prefix is /app/.heroku/php/var
 ; Default Value: log/php-fpm.log
-;error_log = log/php-fpm.log
+error_log = /tmp/heroku.php-fpm.${PORT}.log
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
@@ -145,7 +145,7 @@ daemonize = no
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-;user = nobody
+user = nobody
 ;group = nobody
 
 ; The address on which to accept FastCGI requests.
@@ -473,7 +473,7 @@ pm.max_spare_servers = 3
 ; Note: on highloaded environement, this can cause some delay in the page
 ; process time (several ms).
 ; Default Value: no
-;catch_workers_output = yes
+catch_workers_output = yes
 
 ; Clear environment in FPM workers
 ; Prevents arbitrary environment variables from reaching FPM worker processes
