--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
--e git+https://github.com/dzuelke/bob-builder.git#egg=bob-builder
+-e git+https://github.com/dzuelke/bob-builder.git@tarball#egg=bob-builder
