combined, not common, apache access log (for partiy with nginx, and because it's more useful anyway)

--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -3,7 +3,7 @@ Listen ${PORT}
 <VirtualHost *:${PORT}>
 
     ErrorLog /tmp/heroku.apache2_error.${PORT}.log
-	CustomLog /tmp/heroku.apache2_access.${PORT}.log common
+	CustomLog /tmp/heroku.apache2_access.${PORT}.log combined
 	
     DocumentRoot ${DOCUMENT_ROOT}
 
