--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -37,6 +37,7 @@ Listen ${PORT}
         Require all granted
     </Directory>
 
-    ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:4999${DOCUMENT_ROOT}/$1
+    # ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:4999${DOCUMENT_ROOT}/$1
+    ProxyPassMatch ^/(.*\.php(/.*)?)$ unix:/tmp/heroku.fcgi.${PORT}.sock|fcgi://localhost${DOCUMENT_ROOT}
 
 </VirtualHost>
