new boot for nginx with options, configs, config includes, a ton of checks and all the bells and whistles

--- a/conf/php/php-fpm.conf
+++ b/conf/php/php-fpm.conf
@@ -526,3 +526,5 @@ clear_env = no
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
 ;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 32M
+
+include=${HEROKU_PHP_FPM_CONFIG_INCLUDE}
