fix try_files directive

--- a/conf/nginx/default_include.conf
+++ b/conf/nginx/default_include.conf
@@ -1,5 +1,5 @@
 location ~ \.php {
-    try_files $uri 404;
+    try_files $uri =404;
     include fastcgi_params;
     fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
     fastcgi_pass heroku-fcgi;
