--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -28,8 +28,6 @@ Listen ${PORT}
         #   AllowOverride FileInfo AuthConfig Limit
         #
         AllowOverride All
-    
-        DirectoryIndex index.php
 
         #
         # Controls who can get stuff from this server.
@@ -39,5 +37,7 @@ Listen ${PORT}
 
     # ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:4999${DOCUMENT_ROOT}/$1
     ProxyPassMatch ^/(.*\.php(/.*)?)$ unix:/tmp/heroku.fcgi.${PORT}.sock|fcgi://localhost${DOCUMENT_ROOT}
+
+    Include ${HEROKU_PHP_HTTPD_CONFIG_INCLUDE}
 
 </VirtualHost>
