--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -1,3 +1,6 @@
+# Define heroku-fcgi fcgi://127.0.0.1:4999
+Define heroku-fcgi unix:/tmp/heroku.fcgi.${PORT}.sock|fcgi://localhost
+
 Listen ${PORT}
 
 <VirtualHost *:${PORT}>
@@ -35,8 +38,8 @@ Listen ${PORT}
         Require all granted
     </Directory>
 
-    # ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://127.0.0.1:4999${DOCUMENT_ROOT}/$1
-    ProxyPassMatch ^/(.*\.php(/.*)?)$ unix:/tmp/heroku.fcgi.${PORT}.sock|fcgi://localhost${DOCUMENT_ROOT}
+    # ProxyPassMatch ^/(.*\.php(/.*)?)$ ${heroku-fcgi}${DOCUMENT_ROOT}/$1 # for TCP sockets
+    ProxyPassMatch ^/(.*\.php(/.*)?)$ ${heroku-fcgi}${DOCUMENT_ROOT}
 
     Include ${HEROKU_PHP_HTTPD_CONFIG_INCLUDE}
 
