add missing hhvm-apache2 bin

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "heroku/heroku-buildpack-php",
     "bin": [
+        "bin/heroku-hhvm-apache2",
         "bin/heroku-hhvm-nginx",
         "bin/heroku-php-apache2",
         "bin/heroku-php-nginx"
