TraceEnable off for Apache2, refs #5

--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -18,6 +18,8 @@ Listen ${PORT}
     ErrorLog /tmp/heroku.apache2_error.${PORT}.log
     CustomLog /tmp/heroku.apache2_access.${PORT}.log combined
 
+    TraceEnable off
+
     <Directory ${HEROKU_APP_DIR}>
         # lock it down fully by default
         # if it's also the docroot, it'll be opened up again further below
