fix rewrites in or to subdirectories

--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -47,17 +47,19 @@ Listen ${PORT}
 
         # no limits
         Require all granted
-
-        # default rewrite to send all .php requests to FastCGI
-        # ProxyPass has a boatload of issues with access control, DirectoryIndex et cetera, so we're not using it
-        RewriteEngine On
-        RewriteOptions InheritBefore
-        RewriteCond %{REQUEST_FILENAME} -f
-        RewriteRule ^(.*\.php(/.*)?)$ fcgi://heroku-fcgi${DOCUMENT_ROOT}/$1 [L,P]
     </Directory>
 
     Include ${HEROKU_PHP_HTTPD_CONFIG_INCLUDE}
 
+    # default rewrite to send all .php requests to FastCGI
+    # ProxyPass has a boatload of issues with access control, DirectoryIndex et cetera, so we're not using it
+    RewriteEngine On
+    # make sure our rule gets appended to any per-dir or .htaccess rule users have defined
+    RewriteOptions InheritDown
+    # fcgi://heroku-fcgi shorthand is "declared" by the <Proxy> section above
+    # END stops further processing for good
+    # do not use the NS flag, or else e.g. DirectoryIndex based hits to index.php won't trigger the rewrite
+    RewriteRule ^(.*\.php(/.*)?)$ fcgi://heroku-fcgi${DOCUMENT_ROOT}/$1 [END,P]
     # ProxyPassMatch ^/(.*\.php(/.*)?)$ ${heroku-fcgi}${DOCUMENT_ROOT}/$1 # for TCP sockets
     # ProxyPassMatch ^/(.*\.php(/.*)?)$ ${heroku-fcgi}${DOCUMENT_ROOT}
 
