--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -15,6 +15,8 @@ Listen ${PORT}
 
 <VirtualHost *:${PORT}>
 
+    ServerName localhost
+
     ErrorLog /tmp/heroku.apache2_error.${PORT}.log
     CustomLog /tmp/heroku.apache2_access.${PORT}.log combined
 
