--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -59,9 +59,14 @@ Listen ${PORT}
     # make sure our rule gets appended to any per-dir or .htaccess rule users have defined
     RewriteOptions InheritDown
     # fcgi://heroku-fcgi shorthand is "declared" by the <Proxy> section above
-    # END stops further processing for good
+    # END stops further processing for good (no point in doing anything else; this runs before per-dir rewrites, and it rewrites to a proxy URL, so nothing else would match anyway)
     # do not use the NS flag, or else e.g. DirectoryIndex based hits to index.php won't trigger the rewrite
-    RewriteRule ^(.*\.php(/.*)?)$ fcgi://heroku-fcgi${DOCUMENT_ROOT}/$1 [END,P]
+    # we check if the request filename contains .php, maybe with extra path info
+    # split the path info off, so we can check if the PHP file exists by referencing capture group 2
+    # then pass the whole thing, capture group 1, to FPM (so PATH_INFO is preserved)
+    RewriteCond %{REQUEST_FILENAME} ^(/(.*\.php)(/.*)?)$
+    RewriteCond %{DOCUMENT_ROOT}/%2 -f
+    RewriteRule . fcgi://heroku-fcgi%{DOCUMENT_ROOT}%1 [P,END]
     # ProxyPassMatch ^/(.*\.php(/.*)?)$ ${heroku-fcgi}${DOCUMENT_ROOT}/$1 # for TCP sockets
     # ProxyPassMatch ^/(.*\.php(/.*)?)$ ${heroku-fcgi}${DOCUMENT_ROOT}
 
