fix missing Authorization headers on Apache

--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -51,6 +51,9 @@ Listen ${PORT}
         Require all granted
     </Directory>
 
+    # mod_proxy doesn't forward the Authorization header, must fix that ourselves
+    SetEnvIfNoCase ^Authorization$ "(.+)" HTTP_AUTHORIZATION=$1
+
     Include ${HEROKU_PHP_HTTPD_CONFIG_INCLUDE}
 
     # default rewrite to send all .php requests to FastCGI
