make RewriteCond regex that looks for '.php' ungreedy to allow '.php' in PATH_INFO; closes #52

--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -67,7 +67,7 @@ Listen ${PORT}
     # we check if the request filename contains .php, maybe with extra path info
     # split the path info off, so we can check if the PHP file exists by referencing capture group 2
     # then pass the whole thing, capture group 1, to FPM (so PATH_INFO is preserved)
-    RewriteCond %{REQUEST_FILENAME} ^(/(.*\.php)(/.*)?)$
+    RewriteCond %{REQUEST_FILENAME} ^(/(.*?\.php)(/.*)?)$
     RewriteCond %{DOCUMENT_ROOT}/%2 -f
     RewriteRule . fcgi://heroku-fcgi%{DOCUMENT_ROOT}%1 [P,END]
     # ProxyPassMatch ^/(.*\.php(/.*)?)$ ${heroku-fcgi}${DOCUMENT_ROOT}/$1 # for TCP sockets
