switch to SetHandler approach for proxying to FPM in Apache

--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -49,29 +49,16 @@ Listen ${PORT}
 
         # no limits
         Require all granted
-
-        # default rewrite to send all .php requests to FastCGI
-        # ProxyPass has a boatload of issues with access control, DirectoryIndex et cetera, so we're not using it
-        RewriteEngine On
-        # make sure our rule gets prepended to any per-dir or .htaccess rule users have defined
-        # placing it here into the Directory context means that people can use rewrites in the include (which ends up in the VHost, see the include below) that affect existing files (e.g. to strip an "index.php" in the URL)
-        # the alternative, placing it further down outside the Directory, before (or after) the Include, with InheritDown, means this wouldn't be possible
-        RewriteOptions InheritDownBefore
-        # fcgi://heroku-fcgi shorthand is "declared" by the <Proxy> section above
-        # END stops further processing for good (no point in doing anything else; this runs before per-dir rewrites, and it rewrites to a proxy URL, so nothing else would match anyway)
-        # do not use the NS flag, or else e.g. DirectoryIndex based hits to index.php won't trigger the rewrite
-        # we check if the request filename contains .php, maybe with extra path info
-        # split the path info off, so we can check if the PHP file exists by referencing capture group 2
-        # then pass the whole thing, capture group 1, to FPM (so PATH_INFO is preserved)
-        RewriteCond %{REQUEST_FILENAME} ^(/(.*?\.php)(/.*)?)$
-        RewriteCond %2 -f
-        RewriteRule . fcgi://heroku-fcgi%1 [P,END]
-        # ProxyPassMatch ^/(.*\.php(/.*)?)$ ${heroku-fcgi}${DOCUMENT_ROOT}/$1 # for TCP sockets
-        # ProxyPassMatch ^/(.*\.php(/.*)?)$ ${heroku-fcgi}${DOCUMENT_ROOT}
     </Directory>
 
     # mod_proxy doesn't forward the Authorization header, must fix that ourselves
     SetEnvIfNoCase ^Authorization$ "(.+)" HTTP_AUTHORIZATION=$1
+
+    # pass requests to .php files to mod_proxy_fcgi
+    # this requires Apache 2.4.10+ and PHP 5.5.15+ to work properly
+    <FilesMatch \.php$>
+        SetHandler proxy:fcgi://heroku-fcgi
+    </FilesMatch>
 
     Include ${HEROKU_PHP_HTTPD_CONFIG_INCLUDE}
 
