raise default log level for new relic to prevent clutter in the logs (e.g. from every CLI invocation during boot)

--- a/conf/php/conf.d/ext-newrelic.ini
+++ b/conf/php/conf.d/ext-newrelic.ini
@@ -2,6 +2,9 @@ extension = newrelic.so
 
 newrelic.daemon.location = /app/.heroku/php/bin/newrelic-daemon
 
+newrelic.loglevel = warning
+newrelic.daemon.loglevel = warning
+
 newrelic.license = ${NEW_RELIC_LICENSE_KEY}
 newrelic.appname = ${NEW_RELIC_APP_NAME}
 newrelic.logfile = ${NEW_RELIC_LOG}
