force newrelic to log to stderr; stdout interferes with boots

--- a/conf/php/conf.d/ext-newrelic.ini
+++ b/conf/php/conf.d/ext-newrelic.ini
@@ -7,5 +7,5 @@ newrelic.daemon.loglevel = warning
 
 newrelic.license = ${NEW_RELIC_LICENSE_KEY}
 newrelic.appname = ${NEW_RELIC_APP_NAME}
-newrelic.logfile = ${NEW_RELIC_LOG}
-newrelic.daemon.logfile = ${NEW_RELIC_LOG}
+newrelic.logfile = stderr # the stdout default messes up boots as we capture output for crash detection
+newrelic.daemon.logfile = stderr # the stdout default messes up boots as we capture output for crash detection
