read new relic log level from NEW_RELIC_LOG_LEVEL env var

--- a/conf/php/conf.d/ext-newrelic.ini
+++ b/conf/php/conf.d/ext-newrelic.ini
@@ -2,8 +2,8 @@ extension = newrelic.so
 
 newrelic.daemon.location = /app/.heroku/php/bin/newrelic-daemon
 
-newrelic.loglevel = warning
-newrelic.daemon.loglevel = warning
+newrelic.loglevel = ${NEW_RELIC_LOG_LEVEL}
+newrelic.daemon.loglevel = ${NEW_RELIC_LOG_LEVEL}
 
 newrelic.license = ${NEW_RELIC_LICENSE_KEY}
 newrelic.appname = ${NEW_RELIC_APP_NAME}
