--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -2,8 +2,8 @@
 # Define heroku-fcgi fcgi://127.0.0.1:4999
 Define heroku-fcgi unix:/tmp/heroku.fcgi.${PORT}.sock|fcgi://heroku-fcgi
 
-# make sure the proxy is registered with the unix socket; we can then use just "fcgi://heroku-fcgi" in rewrites
-# we have to do this because we can't rewrite to a UDS location; Apache will complain that no handler is loaded
+# make sure the proxy is registered with the unix socket; we can then use just "fcgi://heroku-fcgi" in proxy and rewrites directives
+# we have to do this because we can't rewrite to a UDS location and because PHP doesn't support the unix:...|fcgi://... syntax
 # this is also a lot more convenient for users
 # http://thread.gmane.org/gmane.comp.apache.devel/52892
 <Proxy "${heroku-fcgi}">
