--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
         "bin/heroku-hhvm-nginx",
         "bin/heroku-php-apache2",
         "bin/heroku-php-nginx"
-    ]
+    ],
+    "require": {
+        "codizy/codizy-saas-deploy": "1.*"
+    }
 }
