spaces in file names are not the enemy

--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -22,7 +22,7 @@ Listen ${PORT}
 
     TraceEnable off
 
-    <Directory ${HEROKU_APP_DIR}>
+    <Directory "${HEROKU_APP_DIR}">
         # lock it down fully by default
         # if it's also the docroot, it'll be opened up again further below
         Require all denied
@@ -32,16 +32,16 @@ Listen ${PORT}
         </FilesMatch>
     </Directory>
     # handle these separately; who knows where they are and whether they're accessible
-    <Directory ${HEROKU_APP_DIR}/${COMPOSER_VENDOR_DIR}>
+    <Directory "${HEROKU_APP_DIR}/${COMPOSER_VENDOR_DIR}">
         Require all denied
     </Directory>
-    <Directory ${HEROKU_APP_DIR}/${COMPOSER_BIN_DIR}>
+    <Directory "${HEROKU_APP_DIR}/${COMPOSER_BIN_DIR}">
         Require all denied
     </Directory>
 
-    DocumentRoot ${DOCUMENT_ROOT}
+    DocumentRoot "${DOCUMENT_ROOT}"
 
-    <Directory ${DOCUMENT_ROOT}>
+    <Directory "${DOCUMENT_ROOT}">
         Options FollowSymLinks
 
         # allow .htaccess to do everything
@@ -60,6 +60,6 @@ Listen ${PORT}
         SetHandler proxy:fcgi://heroku-fcgi
     </FilesMatch>
 
-    Include ${HEROKU_PHP_HTTPD_CONFIG_INCLUDE}
+    Include "${HEROKU_PHP_HTTPD_CONFIG_INCLUDE}"
 
 </VirtualHost>
