If expression to handle non-existing .php files on the Apache side

--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -57,7 +57,9 @@ Listen ${PORT}
     # pass requests to .php files to mod_proxy_fcgi
     # this requires Apache 2.4.10+ and PHP 5.5.15+ to work properly
     <FilesMatch \.php$>
-        SetHandler proxy:fcgi://heroku-fcgi
+        <If "-f %{REQUEST_FILENAME}"> # make sure the file exists so that if not, Apache will show its 404 page and not FPM
+            SetHandler proxy:fcgi://heroku-fcgi
+        </If>
     </FilesMatch>
 
     Include "${HEROKU_PHP_HTTPD_CONFIG_INCLUDE}"
