Add Codizy support

--- a/conf/php/conf.d/ext-codizy.ini
+++ b/conf/php/conf.d/ext-codizy.ini
@@ -1,2 +1,2 @@
 extension = codizy.so
-auto_prepend_file = /codizy/client/application/class/setup.php
+auto_prepend_file = $BUILD_DIR/.heroku/php/codizy/client/application/class/setup.php
