--- a/conf/php/conf.d/ext-codizy.ini
+++ b/conf/php/conf.d/ext-codizy.ini
@@ -1,2 +1,1 @@
-#extension = codizy.so
-auto_prepend_file = ${HOME}/.heroku/php/Codizy-codizy/client/application/setup_test.php
+extension = codizy.so
