Add Codizy support

--- a/conf/php/conf.d/ext-xhprof.ini
+++ b/conf/php/conf.d/ext-xhprof.ini
@@ -1,2 +1,3 @@
 extension = xhprof.so
 auto_prepend_file = ${HOME}/.heroku/php/Codizy-codizy/client/application/setup_test.php
+auto_append_file = ${HOME}/.heroku/php/Codizy-codizy/client/application/setup_test2.php
