add proxy pass rule for kb

--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -63,6 +63,14 @@ Listen ${PORT}
         </If>
     </FilesMatch>
 
+    #<Location "/docs/api/">
+    #    ProxyPass "http://backend.example.com/"
+    #</Location>
+    
+    <Location "/docs/kb/">
+        ProxyPass "http://kb-docs.librato.com.s3-website-us-east-1.amazonaws.com/"
+    </Location>
+
     Include "${HEROKU_PHP_HTTPD_CONFIG_INCLUDE}"
 
 </VirtualHost>
