--- a/conf/php.ini
+++ b/conf/php.ini
@@ -944,8 +944,9 @@ default_socket_timeout = 60
 ; extension folders as well as the separate PECL DLL download (PHP 5).
 ; Be sure to appropriately set the extension_dir directive.
 ;
-extension=soap.so
-extension=apc.so
+;extension=soap.so
+;extension=apc.so
+extension=opcache.so
 extension=ibm_db2.so
 ;extension=php_bz2.dll
 ;extension=php_curl.dll
