--- a/conf/php/php-fpm.conf
+++ b/conf/php/php-fpm.conf
@@ -156,8 +156,8 @@ user = nobody
 ;                            specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-; listen = 127.0.0.1:4999
-listen = /tmp/heroku.fcgi.${PORT}.sock
+ listen = 127.0.0.1:${PORT}
+;listen = /tmp/heroku.fcgi.${PORT}.sock
 
 ; Set listen(2) backlog.
 ; Default Value: 65535 (-1 on FreeBSD and OpenBSD)
