--- a/conf/php/php-fpm.conf
+++ b/conf/php/php-fpm.conf
@@ -146,7 +146,7 @@ daemonize = no
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
 user = nobody
-;group = nobody
+group = nobody
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -156,8 +156,8 @@ user = nobody
 ;                            specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
- listen = 127.0.0.1:${PORT}
-;listen = /tmp/heroku.fcgi.${PORT}.sock
+; listen = 127.0.0.1:${PORT}
+listen = /tmp/heroku.fcgi.${PORT}.sock
 
 ; Set listen(2) backlog.
 ; Default Value: 65535 (-1 on FreeBSD and OpenBSD)
@@ -169,8 +169,8 @@ user = nobody
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0666
 listen.owner = nobody
-;listen.group = nobody
-;listen.mode = 0666
+listen.group = nobody
+listen.mode = 0666
  
 ; List of ipv4 addresses of FastCGI clients which are allowed to connect.
 ; Equivalent to the FCGI_WEB_SERVER_ADDRS environment variable in the original
