--- a/conf/php/php-fpm.conf
+++ b/conf/php/php-fpm.conf
@@ -146,7 +146,7 @@ daemonize = no
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
 user = nobody
-group = nobody
+;group = nobody
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -169,7 +169,7 @@ listen = /tmp/heroku.fcgi.${PORT}.sock
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0666
 listen.owner = nobody
-listen.group = nobody
+;listen.group = nobody
 listen.mode = 0666
  
 ; List of ipv4 addresses of FastCGI clients which are allowed to connect.
