--- a/conf/apache2/heroku.conf
+++ b/conf/apache2/heroku.conf
@@ -14,6 +14,8 @@ Define heroku-fcgi unix:/tmp/heroku.fcgi.${PORT}.sock|fcgi://heroku-fcgi
 
 Listen ${PORT}
 
+IncludeOptional "${HEROKU_PHP_HTTPD_BASE_INCLUDE}"
+
 <VirtualHost *:${PORT}>
 
 	ServerName localhost
