--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 - bundle install
 before_script:
 - bundle exec hatchet ci:setup
-script: bundle exec rspec test/spec/
+script: bundle exec parallel_rspec -n6 test/spec/
 env:
   global:
   - HATCHET_RETRIES=3
