Update composer on Travis startup
They still have an old version, which is buggy with 'composer require --ignore-platform-reqs php:…', now we can drop that workaround

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ dist: xenial
 sudo: false
 before_install:
 - gem install bundler
+- composer self-update
 install:
 - bundle install
 before_script:
