update Heroku CLI before tests
those update warnings clutter the output too much

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
 - bundle install
 before_script:
 - bundle exec hatchet ci:setup
+- heroku update
 script: bundle exec parallel_rspec -n6 test/spec/
 after_script:
 - bundle exec hatchet destroy --all
