FPM slowlog and terminate by default
will now log slow requests after 3 seconds, and terminate after 30

only applied to PHP 7.4 for now

--- a/conf/php/7/4/php-fpm.conf
+++ b/conf/php/7/4/php-fpm.conf
@@ -471,7 +471,7 @@ slowlog = /tmp/heroku.php-fpm.${PORT}.www.slowlog
 ; dumped to the 'slowlog' file. A value of '0s' means 'off'.
 ; Available units: s(econds)(default), m(inutes), h(ours), or d(ays)
 ; Default Value: 0
-;request_slowlog_timeout = 0
+request_slowlog_timeout = 3s
 
 ; Depth of slow log stack trace.
 ; Default Value: 20
@@ -482,7 +482,7 @@ slowlog = /tmp/heroku.php-fpm.${PORT}.www.slowlog
 ; does not stop script execution for some reason. A value of '0' means 'off'.
 ; Available units: s(econds)(default), m(inutes), h(ours), or d(ays)
 ; Default Value: 0
-;request_terminate_timeout = 0
+request_terminate_timeout = 30s
 
 ; Set open file descriptor rlimit.
 ; Default Value: system defined value
