Add support for Heroku-20
This adds support for generating binaries for the upcoming Heroku-20
stack, and testing them in CI.

Before CI will pass:
* #404 will need to be merged, and this rebased on top of it
* the binaries will need to be built/uploaded using the steps here:
  https://github.com/heroku/heroku-buildpack-php/blob/master/support/build/README.md

Refs W-7491249.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,13 @@ matrix:
         if: branch = master OR tag IS present
       - env: STACK=heroku-18
         if: branch = master OR tag IS present
+      - env: STACK=heroku-20
+        if: branch = master OR tag IS present
       - env: STACK=cedar-14 HEROKU_PHP_PLATFORM_REPOSITORIES="- https://lang-php.s3.amazonaws.com/dist-cedar-14-develop/"
         if: branch != master AND tag IS blank
       - env: STACK=heroku-16 HEROKU_PHP_PLATFORM_REPOSITORIES="- https://lang-php.s3.amazonaws.com/dist-heroku-16-develop/"
         if: branch != master AND tag IS blank
       - env: STACK=heroku-18 HEROKU_PHP_PLATFORM_REPOSITORIES="- https://lang-php.s3.amazonaws.com/dist-heroku-18-develop/"
+        if: branch != master AND tag IS blank
+      - env: STACK=heroku-20 HEROKU_PHP_PLATFORM_REPOSITORIES="- https://lang-php.s3.amazonaws.com/dist-heroku-20-develop/"
         if: branch != master AND tag IS blank
