--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ env:
   - HATCHET_RETRIES=3
   - IS_RUNNING_ON_CI=true
   - HATCHET_APP_LIMIT=200
+  - HATCHET_EXPENSIVE_MODE=1
   - HATCHET_DEPLOY_STRATEGY=git
   - HATCHET_BUILDPACK_BASE="https://github.com/heroku/heroku-buildpack-php"
   - HATCHET_APP_PREFIX="htcht-${TRAVIS_JOB_ID}-"
