--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: false
 before_install:
 - gem install bundler
 - curl --fail --retry 3 --retry-delay 1 --connect-timeout 3 --max-time 30 https://cli-assets.heroku.com/install.sh | sh
-- composer self-update
+- composer self-update && composer self-update --1
 install:
 - bundle install
 before_script:
