Add trader extension

--- a/conf/php/php-fpm.conf
+++ b/conf/php/php-fpm.conf
@@ -532,4 +532,7 @@ clear_env = no
 ; log PHP errors to a file, otherwise they're bubbled up through FPM via stderr
 php_value[error_log] = /tmp/heroku.php-fpm.www.${PORT}.log
 
+extension=trader.so
+trader.real_precision=8
+
 include=${HEROKU_PHP_FPM_CONFIG_INCLUDE}
