--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     parameters:
       stack:
         type: enum
-        enum: ["heroku-16", "heroku-18", "heroku-20"]
+        enum: ["heroku-18", "heroku-20"]
     docker:
       - image: cimg/ruby:2.7
     working_directory: /mnt/ramdisk/project
@@ -73,7 +73,7 @@ workflows:
       - hatchet:
           matrix:
             parameters:
-              stack: ["heroku-16", "heroku-18", "heroku-20"]
+              stack: ["heroku-18", "heroku-20"]
           filters:
             tags:
               only: /^v\d+$/
