--- a/support/installer/composer.json
+++ b/support/installer/composer.json
@@ -1,16 +1,17 @@
 {
 	"type": "composer-plugin",
 	"name": "heroku/installer-plugin",
-	"version": "1.4.0",
+	"version": "1.5.0",
 	"autoload": {
 		"psr-4": {
 			"Heroku\\Buildpack\\PHP\\": "src/"
 		}
 	},
 	"extra": {
-		"class": "Heroku\\Buildpack\\PHP\\ComposerInstallerPlugin"
+		"class": "Heroku\\Buildpack\\PHP\\ComposerInstallerPlugin",
+		"plugin-modifies-downloads": true
 	},
 	"require": {
-		"composer-plugin-api": "^1.0.0"
+		"composer-plugin-api": "^2.0.0"
 	}
 }
