--- a/conf/php/8/php-fpm.conf
+++ b/conf/php/8/php-fpm.conf
@@ -588,7 +588,7 @@ clear_env = no
 ;php_flag[display_errors] = off
 ;php_admin_value[error_log] = /var/log/fpm-php.www.log
 ;php_admin_flag[log_errors] = on
-;php_admin_value[memory_limit] = 32M
+php_admin_value[memory_limit] = 256M
 
 ; log PHP errors to a file, otherwise they're bubbled up through FPM via stderr
 php_value[error_log] = /tmp/heroku.php-fpm.www.${PORT}.log
