--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,7 @@ jobs:
             not:
               or:
                 - equal: [ main, << pipeline.git.branch >> ]
+                - equal: [ composer2installer, << pipeline.git.branch >> ]
                 - << pipeline.git.tag >>
           steps:
             - run: 
