Switch to the recommended regional S3 domain
Whilst the global S3 endpoint (`s3.amazonaws.com`) still works,
AWS now recommends using the appropriate regional endpoint
to access the bucket:
https://docs.aws.amazon.com/AmazonS3/latest/userguide/VirtualHosting.html#s3-legacy-endpoints

Our buildpack buckets are in `us-east-1`, whose regional domain
is `*.s3.us-east-1.amazonaws.com`:
https://docs.aws.amazon.com/general/latest/gr/s3.html#s3_region

Ideally the `S3_REGION` env var would be set to values like `us-east-1`
rather than `s3.us-east-1`, however in order that this not be a breaking
change for users using custom buckets, I've left the `s3.` prefix in for
now. In the future the env var handling could be adjusted to strip the
prefix.

GUS-W-11283397.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
           steps:
             - run: 
                 name: Export HEROKU_PHP_PLATFORM_REPOSITORIES to …-develop (since we are not building main or a tag)
-                command: echo 'export HEROKU_PHP_PLATFORM_REPOSITORIES="- https://lang-php.s3.amazonaws.com/dist-${STACK}-develop/"' >> $BASH_ENV
+                command: echo 'export HEROKU_PHP_PLATFORM_REPOSITORIES="- https://lang-php.s3.us-east-1.amazonaws.com/dist-${STACK}-develop/"' >> $BASH_ENV
       - run:
           name: Execute tests
           command: bundle exec parallel_rspec -n 16 --group-by runtime --unknown-runtime 1 --allowed-missing 100 --runtime-log "test/var/log/parallel_runtime_rspec.${STACK}.log" --verbose-process-command --combine-stderr --prefix-output-with-test-env-number test/spec/
