--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,3 +26,35 @@ jobs:
 
       - name: Build & push image to GitHub Container Registry
         run: docker buildx build --pull --platform=linux/arm64,linux/amd64 --tag ghcr.io/robuust/heroku-php-build-heroku-22 --file $(pwd)/support/build/_docker/heroku-22.Dockerfile --push .
+
+  deploy:
+    # Ensure push job passes before pushing image.
+    needs: push
+
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+
+    steps:
+      - name: Build & deploy php-min
+        run: AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" docker run --platform=linux/arm64 --rm -ti --env-file=support/build/_docker/env.default ghcr.io/robuust/heroku-php-build-heroku-22 deploy.sh php-min-8.1.11"
+
+      - name: Build & deploy php
+        run: AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" docker run --platform=linux/arm64 --rm -ti --env-file=support/build/_docker/env.default ghcr.io/robuust/heroku-php-build-heroku-22 deploy.sh php-8.1.11"
+
+      - name: Build & deploy composer
+        run: AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" docker run --platform=linux/arm64 --rm -ti --env-file=support/build/_docker/env.default ghcr.io/robuust/heroku-php-build-heroku-22 deploy.sh composer-2.4.2"
+
+      - name: Build & deploy apache
+        run: AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" docker run --platform=linux/arm64 --rm -ti --env-file=support/build/_docker/env.default ghcr.io/robuust/heroku-php-build-heroku-22 deploy.sh apache-2.4.54"
+
+      - name: Build & deploy nginx
+        run: AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" docker run --platform=linux/arm64 --rm -ti --env-file=support/build/_docker/env.default ghcr.io/robuust/heroku-php-build-heroku-22 deploy.sh nginx-1.22.0"
+
+      - name: Build & deploy ext-imagick
+        run: AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" docker run --platform=linux/arm64 --rm -ti --env-file=support/build/_docker/env.default ghcr.io/robuust/heroku-php-build-heroku-22 deploy.sh extensions/no-debug-non-zts/20210902/imagick-3.7.0"
+
+      - name: Build & deploy ext-pcov
+        run: AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" docker run --platform=linux/arm64 --rm -ti --env-file=support/build/_docker/env.default ghcr.io/robuust/heroku-php-build-heroku-22 deploy.sh extensions/no-debug-non-zts/20210902/pcov-1.0.11"
+
+      - name: Build & deploy ext-redis
+        run: AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" docker run --platform=linux/arm64 --rm -ti --env-file=support/build/_docker/env.default ghcr.io/robuust/heroku-php-build-heroku-22 deploy.sh extensions/no-debug-non-zts/20210902/redis-5.3.7"
