only remove Hatchet apps once all matrix jobs are done
they all share a prefix from github.run_id

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,18 @@ on:
 permissions:
   contents: read
 
+env:
+  HEROKU_DISABLE_AUTOUPDATE: 1
+  HATCHET_RETRIES: 3
+  IS_RUNNING_ON_CI: true
+  HATCHET_APP_LIMIT: 300
+  HATCHET_APP_PREFIX: ${{ format('htcht-{0}-', github.run_id) }}
+  HATCHET_EXPENSIVE_MODE: 1
+  HATCHET_BUILDPACK_BASE: https://github.com/heroku/heroku-buildpack-php
+  HATCHET_BUILDPACK_BRANCH: ${{ github.head_ref || github.ref_name }}
+  HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+  HEROKU_API_USER: ${{ secrets.HEROKU_API_USER }}
+
 jobs:
   integration-test:
     runs-on: ubuntu-22.04
@@ -18,16 +30,6 @@ jobs:
         stack: ["heroku-18", "heroku-20", "heroku-22"]
     env:
       STACK: ${{ matrix.stack }}
-      HEROKU_DISABLE_AUTOUPDATE: 1
-      HATCHET_RETRIES: 3
-      IS_RUNNING_ON_CI: true
-      HATCHET_APP_LIMIT: 200
-      HATCHET_APP_PREFIX: ${{ format('htcht-{0}-', github.run_id) }}
-      HATCHET_EXPENSIVE_MODE: 1
-      HATCHET_BUILDPACK_BASE: https://github.com/heroku/heroku-buildpack-php
-      HATCHET_BUILDPACK_BRANCH: ${{ github.head_ref || github.ref_name }}
-      HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-      HEROKU_API_USER: ${{ secrets.HEROKU_API_USER }}
       BLACKFIRE_CLIENT_ID:  ${{ secrets.BLACKFIRE_CLIENT_ID }}
       BLACKFIRE_CLIENT_TOKEN: ${{ secrets.BLACKFIRE_CLIENT_TOKEN }}
       BLACKFIRE_SERVER_ID: ${{ secrets.BLACKFIRE_SERVER_ID }}
@@ -53,8 +55,21 @@ jobs:
           echo "HEROKU_PHP_PLATFORM_REPOSITORIES=- https://lang-php.s3.us-east-1.amazonaws.com/dist-${STACK}-develop/" >> "$GITHUB_ENV"
       - name: Execute tests
         run: bundle exec parallel_rspec -n 16 --group-by runtime --unknown-runtime 1 --allowed-missing 100 --runtime-log "test/var/log/parallel_runtime_rspec.${STACK}.log" --verbose-command --combine-stderr --prefix-output-with-test-env-number test/spec/
-      - name: Clean up test apps
-        if: always()
-        run: bundle exec hatchet destroy --all
       - name: Print parallel_runtime_rspec.log
         run: cat parallel_runtime_rspec.log | grep -E '^test/spec/[a-z0-9_/\.-]+\.rb:[0-9]+\.[0-9]+$' | sort
+  post-integration-test:
+    if: always()
+    needs: [integration-test]
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Install Ruby and Bundler
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+          ruby-version: "2.7"
+      - name: Hatchet setup
+        run: bundle exec hatchet ci:setup
+      - name: Clean up test apps
+        run: bundle exec hatchet destroy --all
