change CI workflow triggers
now runs on main and pull requests, and allows manual dispatch for branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: CI
 on:
   push:
     branches:
-      - "**"
-    tags:
-      - v*
+      - "main"
+  pull_request:
+  workflow_dispatch:
 
 permissions:
   contents: read
