do not sort formulae in expand-formulae
This allows control over the order in which formulae are built (there can be dependencies between them), as the output will reflect the formulae list input.

GUS-W-12730826

--- a/.github/workflows/platform-build.yml
+++ b/.github/workflows/platform-build.yml
@@ -58,7 +58,7 @@ jobs:
           echo -n "matrix=" >> "$GITHUB_OUTPUT"
           set -o pipefail
           shopt -s nullglob
-          ls ${{inputs.formulae}} | jq -jcRn '[inputs|select(length>0)]' >> "$GITHUB_OUTPUT"
+          ls -f ${{inputs.formulae}} | jq -jcRn '[inputs|select(length>0)]' >> "$GITHUB_OUTPUT"
   docker-build:
     runs-on: ubuntu-22.04
     steps:
